fixes to CLS on mobile for home hero

--- a/src/assets/less/critical.less
+++ b/src/assets/less/critical.less
@@ -117,8 +117,9 @@
         .cs-stats {
             width: 100%;
             max-width: (500/16rem);
+            height: 80px;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: fle;
             gap: (32/16rem);
             opacity: 0;
@@ -126,6 +127,7 @@
         }
 
         .cs-stat-item {
+            width: 100%;
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -137,6 +139,7 @@
             font-size: clamp(2rem, 4vw, 3rem);
             font-weight: 800;
             line-height: 1em;
+            width: 100%;
             color: var(--primary);
             font-family: var(--headerFont);
         }
@@ -144,6 +147,7 @@
         .cs-stat-label {
             font-size: (14/16rem);
             font-weight: 500;
+            max-width: 120px;
             text-transform: uppercase;
             letter-spacing: 0.1em;
             color: rgba(255, 255, 255, 0.7);
@@ -318,6 +322,10 @@
         .cs-stats {
             max-width: (600/16rem);
             gap: (48/16rem);
+        }
+
+        .cs-stat-label {
+            max-width: none;
         }
     }
 }
